--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="myFistApp">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script> src = "script.js"</script>
+    <title>My first Angular JS App</title>
 </head>
+
 <body>
-    <h1>Angular JS Demo 1</h1>
+    <h1>My First Angular JS App</h1>
+    <div ng-controller="myFirstController">
+        {{name}}
+    </div>
 </body>
+
 </html>
