--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="myFistApp">
+<html ng-app="myFirstApplication">
 
 <head>
     <meta charset="UTF-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="angular.min.js"></script>
     <script> src = "script.js"</script>
     <title>My first Angular JS App</title>
 </head>
 
 <body>
-    <h1>My First Angular JS App</h1>
+    <h1>My First Angular JS App 1</h1>
     <div ng-controller="myFirstController">
-        {{name}}
+        Name: {{name}}
     </div>
 </body>
 
