--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html ng-app="myFirstApplication">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <script src="angular.min.js"></script>
-    <script> src = "script.js"</script>
-    <title>My first Angular JS App</title>
+    <script src="script.js"></script>
+    <title>Name Calculator</title>
 </head>
 
-<body>
-    <h1>My First Angular JS App 1</h1>
-    <div ng-controller="myFirstController">
-        Name: {{name}}
+<body ng-app="nameCalculatorApp">
+    <h1>Name Calculator</h1>
+    <div ng-controller="nameCalculatorController">
+        <div>
+            Your Name: 
+            <input type="text" ng-model="name" ng-keyup="calculate();">
+        </div>
+        <div>
+            Numeric value of person's name is: {{totalValue}}
+        </div>
     </div>
+    <div></div>
 </body>
 
 </html>
